<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lbl_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="94dp"
        android:text="@string/mact_lbl_url"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUrl"
        android:layout_width="289dp"
        android:layout_height="65dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="79dp"
        android:ems="10"
        android:hint="@string/mact_hint_url"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="278dp"
        android:layout_height="78dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="340dp"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/mact_hint_phone"
        android:inputType="phone"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="370dp"
        android:text="@string/mact_lbl_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_launch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="181dp"
        android:onClick="openBrowser"
        android:text="@string/mact_btn_launch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginTop="462dp"
        android:onClick="openDialer"
        android:text="@string/mact_btn_ring"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


   <Button
        android:id="@+id/btn_sendtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="556dp"
        android:onClick="sendText"
        android:text="@string/mact_btn_sendtext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="289dp"
        android:layout_height="65dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="548dp"
        android:ems="10"
        android:hint="@string/mact_hint_sendtext"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="628dp"
        android:onClick="closeApp"
        android:text="@string/mact_btn_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="293dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>